adds styling for a button when clicked

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -5,3 +5,12 @@
 #top_element{
 	font-size: 3em;
 }
+
+.clicked{
+	background: #D3D3D3	;
+	text-shadow: none !important;
+	background-image: none;
+  	outline: 0;
+  	-webkit-box-shadow: none !important;
+          	box-shadow: none !important;
+}
