--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,3 +14,18 @@
   	-webkit-box-shadow: none !important;
           	box-shadow: none !important;
 }
+
+.buttons{
+	float: right;
+	display: inline-block;
+}
+
+.title{
+	float: right;
+	display: inline-block;
+}
+
+img{
+	float:left;
+	display: inline-block;
+}
