puts all movies in a row with css styling and gets rid of some bootstrap styling

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -23,9 +23,16 @@
 .title{
 	float: right;
 	display: inline-block;
+
 }
 
 img{
 	float:left;
 	display: inline-block;
+}
+
+.movie{
+	float: left;
+	overflow:auto;
+	border: solid;
 }
