--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,15 @@
 <div class="container">
 	<div class="row">
-		<a href="localhost:3000" class="col-md-6 offset-md-3" id="top_element">Critic Matcher</a>
+		<a href="localhost:3000" class="" id="top_element">Critic Matcher</a>
 	</div>
 </div>
 <div class="container">
 	<div class="row">
-		<div id="movies" class= "col-md-6 offset-md-3">
+		<div id="movies">
 		</div>
 	</div>
 	<div class="row">
-		<div id="top_match" class= "col-md-6 offset-md-3">
+		<div id="top_match" >
 		</div>
 	</div>
 </div>
