puts movies in row and adds bootstrap template code for shims, viewport, etc.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,18 +1,38 @@
-<div class="container">
-	<div class="row">
-		<a href="localhost:3000" class="" id="top_element">Critic Matcher</a>
-	</div>
-</div>
-<div class="container">
-	<div class="row">
-		<div id="movies">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Critic Matcher</title>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+	 <div class="container">
+		<div class="row">
+			<a href="<%= root_path %>" class="col-md-6 offset-md-3" id="top_element">Critic Matcher</a>
 		</div>
 	</div>
-	<div class="row">
-		<div id="top_match" >
+	<div class="container">
+		<div class="row">
+			<div id="movies" class="col-md-6 offset-md-3">
+			</div>
+		</div>
+		<div class="row">
+			<div id="top_match" >
+			</div>
 		</div>
 	</div>
-</div>
+  </body>
+</html>
+
+
 
 <script type="text/javascript">
 
@@ -228,7 +248,7 @@
 			all_movies = (typeof all_movies_check == 'string' ) ? JSON.parse(all_movies_check) : [] ;	
 		}
 		if(all_movies.length > 0){
-			active_movies = all_movies.splice(0,5);
+			active_movies = all_movies.splice(0,4);
 			sessionStorage.setItem('all_movies', JSON.stringify(all_movies));
 			return Promise.resolve(true);
 		}else if (all_movies.length == 0){
