--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -29,7 +29,7 @@ button{
 
 .movie_title{
 	margin: 1px;
-	margin-left: 2px;
+	margin-left: 10px;
 	display: inline-block;
 
 }
@@ -39,6 +39,7 @@ img{
 	display: inline-block;
 	max-width: 100%;
 	max-height: 100%;
+	margin-right: 5px;
 }
 
 .movie{
