--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,18 +12,20 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Fredoka+One|Ultra" rel="stylesheet">
   </head>
   <body>
-	 <div class="container">
-		<div class="row">
-			<a href="<%= root_path %>"  id="top_element">Critic Matcher</a>
-		</div>
-	</div>
+  	<div class="container">
+  		<div class="row">
+  			<a href="<%= root_path %>"  id="top_element" class="col-md-10 col-md-offset-1">Critic    Matcher</a>
+  		</div>
+  	</div>
 	<div class="container">
 		<div class="row">
-			<div id="movies" class="col-md-12">
+			<div id="movies" class="col-md-10 col-md-offset-2">
 			</div>
 		</div>
+		<!-- set a div for 3 -->
 		<div class="row">
 			<div id="top_match" >
 			</div>
@@ -203,8 +205,9 @@
 			image.style.height = '143px';
 			image.style.width = '98px';
 			movieTitle.innerHTML = movie.title;
-			movie_element.appendChild(image);
 			movie_element.appendChild(movieTitle);
+			movie_element.appendChild(image);
+			
 			movie_element.appendChild(buttons);
 			movies_html_id.appendChild(movie_element)
 		})
@@ -249,7 +252,7 @@
 			all_movies = (typeof all_movies_check == 'string' ) ? JSON.parse(all_movies_check) : [] ;	
 		}
 		if(all_movies.length > 0){
-			active_movies = all_movies.splice(0,4);
+			active_movies = all_movies.splice(0,6);
 			sessionStorage.setItem('all_movies', JSON.stringify(all_movies));
 			return Promise.resolve(true);
 		}else if (all_movies.length == 0){
