--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -18,10 +18,10 @@
 
 .movie{
 	float: left;
-	overflow:auto;
 	border-width: thin;
 	padding: 5px;
 	padding-left: none;
+	width: 10em;
 	margin: 10px 10px 0px 5px;
 }
 
@@ -39,23 +39,18 @@ button{
 	font-family: 'Roboto', sans-serif;
 }
 
-.button_first
-
 .movie_title{
-	text-align: center;
-	line-height: 5px;
-	margin-left: 10px;
-	display: inline-block;
-	font-family: 'Roboto', sans-serif;
-	font-weight: bold !important;
+	height: 3em;
+	overflow-y: hidden;
+	word-wrap: break-word;
+	margin-left:10px;
+	font-weight: bold;
 }
 
 img{
-	float:left;
-	display: inline-block;
 	max-width: 100%;
 	max-height: 100%;
-	margin-right: 5px;
+	margin-left: 5px;
 }
 
 
